Add heartbeat storage and recent improvements from Feb 2026
